--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1> <img src="images/NFL_Logo.png" width=20%>NFL Arrested</h1>
+    <h1> <img src="images/NFL_Logo.png">NFL Arrested</h1>
   </header>
 
   <div id="leagues">
