--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
   </div>
 
   <div class="containerAFC">
+    <div class="logo-box"><a href="team.html?team=bal" id="bal"><img src="images/bal.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=buf" id="buf"><img src="images/buf.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=cin" id="cin"><img src="images/cin.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=cle" id="cle"><img src="images/cle.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=den" id="den"><img src="images/den.png" width=80%></a></div> 
+    <div class="logo-box"><a href="team.html?team=hou" id="hou"><img src="images/hou.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=ind" id="ind"><img src="images/ind.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=jac" id="jac"><img src="images/jac.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=kan" id="kan"><img src="images/kan.png" width=80%></a></div>
+     <div class="logo-box"><a href="team.html?team=lac" id="lac"><img src="images/lac.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=mia" id="mia"><img src="images/mia.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=pat" id="pat"><img src="images/pat.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=nyj" id="nyj"><img src="images/nyj.png" width=80%></a></div> 
+    <div class="logo-box"><a href="team.html?team=oak" id="oak"><img src="images/oak.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=pit" id="pit"><img src="images/pit.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=ten" id="ten"><img src="images/ten.png" width=80%></a></div>
+</div>
+
+  <div class="containerNFC">
+       <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div> 
+    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
@@ -33,16 +59,8 @@
     <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div> 
     <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-</div>
-
-  <div class="containerNFC">
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=20%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=20%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=20%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=20%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=20%></a></div> 
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=20%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=20%></a></div>
+    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
 </div>
 <!--
   <div class="teams">
