--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="logo-box"><a href="team.html?team=ind" id="ind"><img src="images/ind.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=jac" id="jac"><img src="images/jac.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=kan" id="kan"><img src="images/kan.png" width=80%></a></div>
-     <div class="logo-box"><a href="team.html?team=lac" id="lac"><img src="images/lac.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=lac" id="lac"><img src="images/lac.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=mia" id="mia"><img src="images/mia.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=pat" id="pat"><img src="images/pat.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=nyj" id="nyj"><img src="images/nyj.png" width=80%></a></div> 
@@ -45,22 +45,22 @@
 </div>
 
   <div class="containerNFC">
-       <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
     <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div> 
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div> 
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
-    <div class="logo-box"><a href="team.html?team=ari" id="ari"><img src="images/ari.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=atl" id="atl"><img src="images/atl.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=car" id="car"><img src="images/car.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=chi" id="chi"><img src="images/chi.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=dal" id="dal"><img src="images/dal.png" width=80%></a></div> 
+    <div class="logo-box"><a href="team.html?team=det" id="det"><img src="images/det.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=gb" id="gb"><img src="images/gb.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=min" id="min"><img src="images/min.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=no" id="no"><img src="images/no.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=nyg" id="nyg"><img src="images/nyg.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=phi" id="phi"><img src="images/phi.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=sf" id="sf"><img src="images/sf.png" width=80%></a></div> 
+    <div class="logo-box"><a href="team.html?team=sea" id="sea"><img src="images/sea.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=la" id="la"><img src="images/la.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=tb" id="tb"><img src="images/tb.png" width=80%></a></div>
+    <div class="logo-box"><a href="team.html?team=was" id="was"><img src="images/was.png" width=80%></a></div>
 </div>
 <!--
   <div class="teams">
